// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a leading icon 1`] = `
<View
  accessibilityLabel="Add"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 56,
      },
      {
        "elevation": 2,
        "shadowColor": "#402A1A",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#B54C35",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 18,
          },
          undefined,
          {
            "fontFamily": "Feather",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          undefined,
        ]
      }
    >
      
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Nunito-SemiBold",
            "fontSize": 17,
            "lineHeight": 22,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Add
    </Text>
  </View>
</View>
`;

exports[`Button renders at size lg 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 56,
      },
      {
        "elevation": 2,
        "shadowColor": "#402A1A",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#B54C35",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Nunito-SemiBold",
            "fontSize": 17,
            "lineHeight": 22,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Button renders at size md 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 48,
      },
      {
        "elevation": 2,
        "shadowColor": "#402A1A",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#B54C35",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Nunito-SemiBold",
            "fontSize": 17,
            "lineHeight": 22,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Button renders loading and disabled states 1`] = `
<View
  accessibilityLabel="Saving"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": true,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 56,
      },
      {
        "elevation": 2,
        "shadowColor": "#402A1A",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#B54C35",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#FFFFFF"
    size="small"
  />
</View>
`;

exports[`Button renders loading and disabled states 2`] = `
<View
  accessibilityLabel="Blocked"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 56,
      },
      false,
      {
        "backgroundColor": "#EDE0D1",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Nunito-SemiBold",
            "fontSize": 17,
            "lineHeight": 22,
          },
          {
            "color": "#6B6058",
          },
        ]
      }
    >
      Blocked
    </Text>
  </View>
</View>
`;

exports[`Button renders the destructive variant 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 56,
      },
      {
        "elevation": 2,
        "shadowColor": "#402A1A",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#D34247",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Nunito-SemiBold",
            "fontSize": 17,
            "lineHeight": 22,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Button renders the ghost variant 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 56,
      },
      false,
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EDE0D1",
        "borderWidth": 1,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Nunito-SemiBold",
            "fontSize": 17,
            "lineHeight": 22,
          },
          {
            "color": "#B54C35",
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Button renders the primary variant 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 56,
      },
      {
        "elevation": 2,
        "shadowColor": "#402A1A",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#B54C35",
        "borderColor": "transparent",
        "borderWidth": 0,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Nunito-SemiBold",
            "fontSize": 17,
            "lineHeight": 22,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Button renders the secondary variant 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 999,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
      {
        "minHeight": 56,
      },
      false,
      {
        "backgroundColor": "#FFEDE7",
        "borderColor": "#FF6B4A",
        "borderWidth": 1,
      },
      {
        "alignSelf": "stretch",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Nunito-SemiBold",
            "fontSize": 17,
            "lineHeight": 22,
          },
          {
            "color": "#B54C35",
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;
